--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -172,7 +172,7 @@
             height: 45px;
             padding-left: 15px;
             padding-right: 85px;
-            border-radius: 50%;
+            border-radius: 50px;
             border: none;
             outline: none;
             margin-right: 84px;
