--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,6 +8,11 @@ html {
     box-sizing: inherit;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 a {
     text-decoration: none;
 }
@@ -22,6 +27,18 @@ li {
 body {
     margin: 0;
     font-family: $font;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+.content {
+    flex: 1 0 auto;
+}
+.footer {
+    flex: 0 0 auto;
 }
 
 .container {
@@ -220,3 +237,127 @@ body {
         background-repeat: no-repeat;
     }
 }
+
+.breadcrumbs {
+    height: 280px;
+    text-align: center;
+    color: #ffffff;
+
+    &__title {
+        font-weight: 400;
+        font-size: 26px;
+        padding: 85px 0 35px;
+
+        span {
+            font-weight: 500;
+        }
+    }
+
+    &__form-wrapper {
+        position: relative;
+        max-width: 555px;
+        margin: 0 auto;
+
+        input {
+            border: none;
+            display: block;
+            width: 100%;
+            height: 50px;
+            color: #ababab;
+            font-size: 15px;
+            line-height: 28px;
+            padding-left: 29px;
+            padding-right: 125px;
+            border-radius: 50px;
+            outline: none;
+
+            &::placeholder {
+                color: #ababab;
+            }
+        }
+
+        button {
+            position: absolute;
+            bottom: 0;
+            right: -1px;
+            height: 50px;
+            width: 110px;
+            border: none;
+            background-color: $light__blue;
+            color: #ffffff;
+            border-radius: 50px;
+            cursor: pointer;
+            outline: none;
+        }
+    }
+}
+
+.breadcrumbs-bottom {
+    &__list {
+        display: inline-block;
+        position: relative;
+        padding: 35px;
+        li {
+            display: inline-block;
+            position: relative;
+
+            & + li {
+                padding-left: 24px;
+
+                &::before {
+                    content: "/";
+                    position: absolute;
+                    left: 8px;
+                }
+            }
+
+            &:last-child {
+                a,
+                span {
+                    color: #bfcad7;
+                }
+            }
+
+            a {
+                color: #fff;
+            }
+        }
+    }
+}
+
+// .breadcrumbs {
+//     &__inner {
+//         padding: 45px 0 40px;
+//         background-color: #000000;
+//     }
+
+//     &__list {
+//         li {
+
+//             display: inline-block;
+//             position: relative;
+
+//             & + li {
+//                 padding-left: 24px;
+
+//                 &::before {
+//                     content: "-";
+//                     position: absolute;
+//                     left: 8px;
+//                     color: $green;
+//                 }
+//             }
+
+//             &:last-child {
+//                 a,
+//                 span {
+//                     color: $bg;
+//                 }
+//             }
+//         }
+
+//         a {
+//             color: #b0bec5;
+//         }
+//     }
+// }
