--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -7,6 +7,13 @@
 .header {
     font-weight: 400;
     background-color: #eef1f3;
+
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+        max-width: 530px;
+        width: 100%;
+    }
 }
 
 .header__inner {
@@ -22,9 +29,14 @@
         height: 36px;
         background-color: $light__blue;
         border-radius: 50px;
+        position: relative;
+        bottom: -6px;
     }
 
     .header__icons {
+        position: relative;
+        bottom: -14px;
+
         &-noti,
         &-mail,
         &-cart {
@@ -54,17 +66,20 @@
             bottom: 20px;
             color: #ffffff;
             z-index: 2;
+            font-weight: 500;
         }
 
         &-noti::before {
             background-color: #ff6a6c;
             left: 16.8px;
             bottom: 17px;
+            width: 26px;
+            border-radius: 50px;
         }
 
         &-noti::after {
             content: "25";
-            right: -4.5px;
+            right: -6.5px;
         }
 
         &-mail::before {
@@ -75,7 +90,7 @@
 
         &-mail::after {
             content: "6";
-            right: 0px;
+            right: -1px;
         }
 
         &-cart::before {
@@ -1404,7 +1419,7 @@
         button {
             position: absolute;
             bottom: 0;
-            right: 0;
+            right: -1px;
             height: 50px;
             width: 110px;
             border: none;
@@ -1412,6 +1427,7 @@
             color: #ffffff;
             border-radius: 50px;
             cursor: pointer;
+            outline: none;
         }
     }
 
@@ -1459,7 +1475,7 @@
             &-google {
                 background-color: #f05b44;
                 left: 110px;
-                
+
                 &::before {
                     background-image: url(../img/google.svg);
                 }
@@ -1468,7 +1484,7 @@
             &-pn {
                 background-color: #9c0c1c;
                 left: 165px;
-                
+
                 &::before {
                     background-image: url(../img/pinterest.svg);
                 }
@@ -1477,7 +1493,7 @@
             &-in {
                 background-color: #0da6be;
                 left: 220px;
-                
+
                 &::before {
                     background-image: url(../img/linkedin-in.svg);
                 }
@@ -1486,7 +1502,7 @@
             &-dr {
                 background-color: #ea4c89;
                 left: 275px;
-                
+
                 &::before {
                     background-image: url(../img/dribbble.svg);
                 }
@@ -1515,3 +1531,403 @@
     }
 }
 // footer end
+
+// new page
+
+// filters start
+
+.filters {
+    height: 102px;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__left {
+        padding: 40px 0 45px;
+        font-size: 16px;
+        margin-right: 285px;
+
+        .filters__new-active {
+            color: $light__blue;
+            padding-right: 35px;
+        }
+
+        a,
+        span {
+            color: #555555;
+        }
+    }
+
+    &__box {
+        cursor: pointer;
+        border: 1px solid #eceff2;
+        margin: 28px 0;
+        border-radius: 5px;
+        font-size: 14px;
+        color: #747b86;
+        padding: 15px 85px 15px 15px;
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            background-image: url(../img/chevron-down-small.svg);
+            display: block;
+            width: 20px;
+            height: 15px;
+            right: 20px;
+        }
+
+        .price-filter {
+            span {
+                color: #555555;
+            }
+        }
+    }
+
+    &__box-btn {
+        border: 1px solid #eceff2;
+        margin: 28px 0;
+        border-radius: 5px;
+        font-size: 14px;
+        color: #747b86;
+        padding: 15px 85px 15px 15px;
+        position: relative;
+
+        .filters__box-grid {
+            &::before {
+                content: "";
+                position: absolute;
+                background-image: url(../img/grid.svg);
+                display: block;
+                width: 20px;
+                height: 20px;
+                left: 20px;
+            }
+        }
+
+        .filters__box-list {
+            &::before {
+                content: "";
+                position: absolute;
+                background-image: url(../img/list.svg);
+                display: block;
+                width: 20px;
+                height: 20px;
+                right: 20px;
+            }
+        }
+    }
+}
+.quantity-filter,
+.price-filter {
+    max-height: 42px;
+    cursor: pointer;
+    position: relative;
+
+    .quantity__filters,
+    .price__filters {
+        display: none;
+        flex-direction: column;
+        text-align: center;
+        padding: 5px 10px 10px;
+        width: 195px;
+
+        margin-top: 10px;
+        position: absolute;
+        background-color: #fff;
+        z-index: 1;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 5px;
+        border-bottom-left-radius: 5px;
+        box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+    }
+
+    .price__filters {
+        left: -2.5px;
+    }
+
+    .quantity__filters {
+        left: -6px;
+    }
+
+    .quantity__filter,
+    .price__filter {
+        padding: 10px;
+        border-bottom: 1px solid #dcdcdc;
+    }
+
+    .quantity__filter:last-child,
+    .price__filter:last-child {
+        border-bottom: none;
+    }
+}
+
+// filters end
+// items start
+
+.items {
+    background-color: #eff1f5;
+    padding-top: 80px;
+
+    &__cards {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-left: 30px;
+    }
+
+    &:hover {
+        .page__item-more {
+            left: 0;
+            top: 65px;
+        }
+
+        .page__item-live {
+            left: 135px;
+            top: 65px;
+        }
+    }
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        max-width: 1140px;
+        width: 100%;
+        max-height: 1880px;
+    }
+
+    .page__item {
+        max-width: 265px;
+        height: 370px;
+        margin-top: 0;
+        margin-bottom: 30px;
+
+        img {
+            max-width: 265px;
+        }
+
+        &-content {
+            padding: 10px 20px 9px;
+            &-title {
+                font-weight: 500;
+                font-size: 18px;
+                padding-bottom: 16px;
+            }
+        }
+
+        &-rate-star {
+            position: relative;
+            left: -11px;
+            top: -8px;
+        }
+
+        &-author {
+            img {
+                width: 28px;
+                height: 28px;
+            }
+        }
+
+        .page__item-author-name {
+            font-weight: 400;
+            font-size: 15px;
+        }
+
+        &-info-wrapper {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        &-info-span {
+            color: $light__blue;
+            position: relative;
+            top: -10px;
+
+            &::before {
+                content: "";
+                position: absolute;
+                background-image: url(../img/cart1.svg);
+                width: 20px;
+                height: 20px;
+                left: -20px;
+                bottom: -4px;
+                background-repeat: no-repeat;
+            }
+        }
+
+        .info::before {
+            display: none;
+        }
+
+        &-author-tech {
+            font-size: 15px;
+            font-weight: 400;
+            color: #7347c1;
+        }
+
+        &-author-tech-img {
+            position: relative;
+            top: 3px;
+        }
+    }
+}
+
+.aside {
+    max-width: 265px;
+    width: 100%;
+
+    &__item {
+        background-color: #fff;
+        max-width: 265px;
+        padding: 0 25px;
+        margin-bottom: 30px;
+    }
+
+    &__title {
+        font-size: 20px;
+        color: #000000;
+        padding: 28px 0;
+        border-bottom: 1px solid #e7ebee;
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            background-image: url(../img/chevron-down-small.svg);
+            width: 20px;
+            height: 15px;
+            right: 0;
+        }
+    }
+
+    &__list {
+        padding: 30px 0 35px;
+    }
+
+    &__paragraph {
+        padding-left: 20px;
+        position: relative;
+        font-size: 15px;
+        padding-top: 25px;
+
+        &::before {
+            content: "";
+            position: absolute;
+            background-image: url(../img/chevron-right1.svg);
+            width: 20px;
+            height: 20px;
+            left: 0;
+            background-repeat: no-repeat;
+        }
+
+        span {
+            position: absolute;
+            right: 0;
+        }
+
+        span,
+        a {
+            color: #555555;
+        }
+    }
+
+    &__paragraph:first-child {
+        padding-top: 0;
+    }
+
+    &__paragraph-active {
+        a,
+        span {
+            color: $light__blue;
+        }
+    }
+
+    &__paragraph-dots {
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            background-image: url(../img/paragraph-dot.svg);
+            width: 20px;
+            height: 15px;
+            right: 0;
+            bottom: -1px;
+        }
+    }
+}
+
+.price-range__btn {
+    border: none;
+    background-color: $light__blue;
+    font-weight: 500;
+    font-size: 15px;
+    color: #ffffff;
+    padding: 15px 30px;
+    border-radius: 50px;
+    margin: 85px 25px 40px 25px;
+    outline: none;
+    cursor: pointer;
+}
+
+.irs--flat .irs-line {
+    background-color: #f2f5f8;
+    height: 5px;
+}
+
+.irs--flat .irs-bar {
+    background-color: #7347c1;
+    height: 5px;
+}
+
+.irs--flat .irs-handle {
+    width: 16px;
+    height: 16px;
+    border: 4px solid $light__blue;
+    background-color: #ffffff;
+    border-radius: 50%;
+}
+
+.irs--flat .irs-handle > i:first-child {
+    display: none;
+}
+
+.irs--flat .irs-from,
+.irs--flat .irs-to,
+.irs--flat .irs-single {
+    top: 62px;
+}
+
+.irs--flat .irs-from:before,
+.irs--flat .irs-to:before,
+.irs--flat .irs-single:before {
+    display: none;
+}
+
+.irs--flat .irs-from,
+.irs--flat .irs-single,
+.irs--flat .irs-to {
+    border-radius: 50px;
+    background-color: #f1ecf9 !important;
+    padding: 10px 25px 8px !important;
+    line-height: 1.333;
+    font-size: 15px;
+    color: #7347c1;
+}
+
+.irs--flat .irs-handle {
+    top: 19px;
+}
+
+.pagination {
+    display: flex;
+    justify-content: flex-end;
+}
+
+// items end
