--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -89,6 +89,7 @@ body {
         width: 0;
         height: 0;
         outline: none;
+        font-weight: 500;
     }
 
     &:hover {
@@ -103,14 +104,24 @@ body {
             font-size: 15px;
             width: 130px;
             height: 45px;
-            background-color: $light__blue;
+            background-color: transparent;
             border-radius: 50px;
             transition: linear 0.5s;
+            border: 1px solid #fff;
+            box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
 
             &:hover {
                 color: $light__blue;
                 background-color: #fff;
             }
+        }
+
+        .img {
+            content: url(../img/hover-bg.svg);
+            width: 100%;
+            max-height: 230px;
+            height: 100%;
+            z-index: 1;
         }
 
         .more {
@@ -126,6 +137,8 @@ body {
     .img {
         max-width: 360px;
         max-height: 230px;
+        width: 100%;
+        height: 100%;
         background-size: cover;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
