--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -530,14 +530,16 @@
         border-radius: 5px;
         max-height: 450px;
         height: 100%;
+        box-shadow: 0px 2px 30px 0px rgba(147, 155, 168, 0.1);
     }
-
+      
     &__slider-img {
         padding-right: 50px;
         max-width: 555px;
         border-radius: 5px;
         max-height: 450px;
         height: 100%;
+        background-size: cover;
     }
 
     &__slider-title {
